Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-109874

q20algorithm triggers -Werror,-Wunused-template

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P3: Somewhat important
    • 6.7.0 FF
    • 6.4.1
    • Build tools: moc
    • None
    • macOS
    • 53cc92334 (dev)

    Description

      We upgraded our build system to macOS 13 and triggered a rebuild of our application. But since we uses a lot of warnings with -Werror our build fail now because the moc generates some includes with warnings (errors).

       

      /workspace/1.26_MacOS/build/build/AusweisAppUiProxy.build/Debug/Objects-normal/x86_64/mocs_compilation.o
      In file included from /Users/governikus/workspace/1.26_MacOS/build/src/ui/proxy/AusweisAppUiProxy_autogen/mocs_compilation.cpp:3:
      In file included from /Users/governikus/workspace/1.26_MacOS/build/src/ui/proxy/AusweisAppUiProxy_autogen/include_Debug/EWIEGA46WW/moc_UIPlugInProxy.cpp:12:
      In file included from /Users/governikus/workspace/1.26_MacOS/libs/build/dist/lib/QtCore.framework/Headers/qplugin.h:12:
      /Users/governikus/workspace/1.26_MacOS/libs/build/dist/lib/QtCore.framework/Headers/q20algorithm.h:150:20: error: unused function template 'operator()' [-Werror,-Wunused-template]
          constexpr bool operator()(InputIterator first, Sentinel last, Predicate pred, Projection proj = {}) const
                         ^
      /Users/governikus/workspace/1.26_MacOS/libs/build/dist/lib/QtCore.framework/Headers/q20algorithm.h:163:20: error: unused function template 'operator()' [-Werror,-Wunused-template]
          constexpr bool operator()(InputIterator first, Sentinel last, Predicate pred, Projection proj = {}) const
                         ^
      /Users/governikus/workspace/1.26_MacOS/libs/build/dist/lib/QtCore.framework/Headers/q20algorithm.h:176:20: error: unused function template 'operator()' [-Werror,-Wunused-template]
          constexpr bool operator()(InputIterator first, Sentinel last, Predicate pred, Projection proj = {}) const
                         ^
      3 errors generated. 

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            fabiankosmale Fabian Kosmale
            misery André Klitzing
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes