Avoid unused-template warning on macOS with xcodebuild

Fixes: QTBUG-109874
Change-Id: Ic75643300ee3e27da758da3f44b5dc4caeb7814e
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>